[gd_scene load_steps=5 format=3 uid="uid://8ubcoujpcbxa"]

[ext_resource type="Script" path="res://Controlmaker.gd" id="1_w2icp"]
[ext_resource type="FontFile" uid="uid://cu1b0xcfhq0l" path="res://assets/retro.ttf" id="2_dewin"]
[ext_resource type="Script" path="res://LineEdit.gd" id="3_r033j"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ye20p"]
size = Vector2(39.75, 39.75)

[node name="Level14" type="Node"]

[node name="Control" type="Control" parent="."]
layout_mode = 3
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -20.0
offset_right = 20.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
script = ExtResource("1_w2icp")

[node name="Button" type="Button" parent="Control"]
visible = false
modulate = Color(1, 1, 1, 0)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -21.0
offset_top = -20.0
offset_right = 21.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2
disabled = true
text = "help
"

[node name="LineEdit2" type="LineEdit" parent="Control"]
z_index = 1
custom_minimum_size = Vector2(280, 40)
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -180.0
offset_top = 165.0
offset_right = 180.0
offset_bottom = 224.0
grow_horizontal = 2
grow_vertical = 0
theme_override_fonts/font = ExtResource("2_dewin")
theme_override_font_sizes/font_size = 40
caret_blink = true
script = ExtResource("3_r033j")

[node name="Area2D" type="Area2D" parent="Control"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Control/Area2D"]
position = Vector2(20.125, 20.125)
shape = SubResource("RectangleShape2D_ye20p")

[node name="ColorRect" type="ColorRect" parent="."]
visible = false
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
color = Color(0, 0, 0, 1)

[node name="ColorRect2" type="ColorRect" parent="."]
visible = false
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -20.0
offset_right = 20.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="LevelNumber" type="Label" parent="."]
unique_name_in_owner = true
visible = false
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -20.0
offset_top = 36.0
offset_right = 20.0
offset_bottom = 59.0
grow_horizontal = 2
theme_override_fonts/font = ExtResource("2_dewin")
theme_override_font_sizes/font_size = 40
text = "0"
horizontal_alignment = 1
vertical_alignment = 1

[node name="SoftLockWarning" type="Label" parent="."]
visible = false
anchors_preset = -1
anchor_left = 0.5
anchor_top = 0.452
anchor_right = 0.5
anchor_bottom = 0.452
offset_left = -498.0
offset_top = -209.896
offset_right = 498.0
offset_bottom = -46.896
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("2_dewin")
theme_override_font_sizes/font_size = 40
text = "You soft-locked the game.
You'll have to restart to progress.
"
horizontal_alignment = 1
vertical_alignment = 1

[node name="SoftLockButton" type="Button" parent="."]
visible = false
self_modulate = Color(1, 1, 1, 0)
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -45.0
offset_top = -121.0
offset_right = 51.0
offset_bottom = -25.0
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("2_dewin")
theme_override_font_sizes/font_size = 48
disabled = true

[node name="SoftLockRestart" type="Label" parent="."]
visible = false
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -52.0
offset_top = -153.0
offset_right = 52.0
offset_bottom = 14.0
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("2_dewin")
theme_override_font_sizes/font_size = 88
text = "X"
horizontal_alignment = 1
vertical_alignment = 1

[connection signal="pressed" from="Control/Button" to="Control" method="_on_button_pressed"]
[connection signal="text_submitted" from="Control/LineEdit2" to="Control" method="_on_line_edit_2_text_submitted"]
[connection signal="mouse_entered" from="Control/Area2D" to="Control" method="_on_area_2d_mouse_entered"]
[connection signal="mouse_exited" from="Control/Area2D" to="Control" method="_on_area_2d_mouse_exited"]
[connection signal="pressed" from="SoftLockButton" to="Control" method="_on_soft_lock_button_pressed"]
